Homepage now shows total EVs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ev-tracker",
+  "name": "poketeamster",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scrape": "python ./tools/scraper/evScraper.py"
   },
   "eslintConfig": {
     "extends": "react-app"
